syntax = "proto3";

package fixbug;
option cc_generic_services = true;

message ResultCode
{
    int32 errorcode = 1;
    bytes errmsg = 2;
}

message GetFriendsListRequest
{
    uint32 id = 1;
}

message GetFriendsListResponse
{
    ResultCode result = 1;
    repeated bytes friends = 2; //创建 friends[]
}

service FriendServiceRpc
{
    rpc GetFriendsList(GetFriendsListRequest) returns (GetFriendsListResponse);
}