syntax = "proto3"; // 声明 protobuf 版本

package fixbug;    // 声明代码所在的包(for C++: namespace)



//数据, 列表, 映射表

/*错误信息*/
message ResultCode{
    int32 errorcode = 1;
    bytes errmsg = 2;
}

/*定义登录消息类型*/
message LoginRequest{
    bytes name = 1; // 第一个字段 name
    bytes pwd = 2;  // 第二个字段 pwd
    // map<int32, string> test = 3; // 可以使用Hash映射
}

/*定义登录响应消息类型*/
message LoginResponse{
    ResultCode result = 1;
    bool success = 2;
}

/*定义获取好友列表信息请求*/
message GetFriendListsRequest{
    uint32 userid = 1;

}

/*用户信息*/
message user{
    bytes name = 1;
    uint32 age = 2;
    enum Sex{
        male = 0;
        female = 1;
    }
    Sex sex = 3;
}

/*定义响应好友列表信息请求*/
message GetFriendListsResponse{
    ResultCode result = 1;
    repeated user friendList = 2; // 定义列表类型
}

// protoc filename.proto --cpp_out=./

/*生成service服务类和RPC方法描述, 默认不生成*/
option cc_generic_services = true;

/*在Protobuf中怎么定义描述RPC方法的类型 - service*/
service userServiceRPC{ // 生成 userServiceRPC_stub 类
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc GetFriendLists(GetFriendListsRequest) returns(GetFriendListsResponse);
}



